[package]
name = "client"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.3.4"
message-passing-framework = { path="../message-passing-framework" }
common = { path="../common" }
